Bug 180853 - podcast url is never displayed
Summary: podcast url is never displayed
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Podcast (other bugs)
Version First Reported In: 2.0.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-15 18:50 UTC by andreaswuest
Modified: 2009-12-09 11:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andreaswuest 2009-01-15 18:50:26 UTC
Version:           2.0.1 (using 4.1.3 (KDE 4.1.3), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.27-9-generic

hello,

one you added a podcast the url you used for the podcast is never 
again displayed. it should at least show up in the edit dialog. because
it is quite annoying if you want to add the podcast to another app, but
you have to look up the url again. copying the url would be really nice.

cheers,
andy
Comment 1 Bart Cerneels 2009-01-17 20:21:49 UTC
SVN commit 912609 by shanachie:

Display feed url in the config dialog. Left click copies it to clipboard.

I didn't manage to figure out how to get the size of the (translated) dialog. So I use a hardcoded value for the maximum width of the URL that doesn't take i18n in consideration.
It could be a nice JJ to make this work correctly.

BUG:180853

 M  +160 -119  PodcastSettingsBase.ui  
 M  +22 -0     PodcastSettingsDialog.cpp  
 M  +1 -0      PodcastSettingsDialog.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=912609