Display feed url in the config dialog. Left click copies it to clipboard.

I didn't manage to figure out how to get the size of the (translated) dialog. So I use a hardcoded value for the maximum width of the URL that doesn't take i18n in consideration.
It could be a nice JJ to make this work correctly.

BUG:180853

svn path=/trunk/extragear/multimedia/amarok/; revision=912609